--- a/numpy_basic.ipynb
+++ b/numpy_basic.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0a4407f8",
+   "id": "5cfa1e83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e129682a",
+   "id": "200fe457",
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "89f9dd4d",
+   "id": "de010bdb",
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "cd9e1d8a",
+   "id": "ec177045",
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "14cfdf08",
+   "id": "7ae7481b",
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "e1e734a0",
+   "id": "16d8982f",
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "5370648a",
+   "id": "c0e93d3c",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "0aedba43",
+   "id": "5accd22c",
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "f47ba8cd",
+   "id": "dd83852a",
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffa3a139",
+   "id": "fa3c2b35",
    "metadata": {},
    "source": [
     "### np.where"
@@ -198,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "2ce59dab",
+   "id": "01ca3591",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87414277",
+   "id": "1b058655",
    "metadata": {},
    "source": [
     "###  argmax & argmin"
@@ -229,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "d4ca025f",
+   "id": "4ab08016",
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "042dd8b8",
+   "id": "42461f4c",
    "metadata": {},
    "source": [
     "### fancy index"
@@ -258,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "677f6187",
+   "id": "8cdc13b8",
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "af0df833",
+   "id": "9de608ff",
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "159ae4ad",
+   "id": "805d69d5",
    "metadata": {},
    "source": [
     "### loadtxt & savetxt"
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "8ff65dcb",
+   "id": "9b01253e",
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "64f43c90",
+   "id": "779aa44b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "98e86668",
+   "id": "6dcef47d",
    "metadata": {},
    "outputs": [
     {
@@ -364,16 +364,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92331b8a",
+   "id": "7ed5438b",
    "metadata": {},
    "source": [
-    "### numpy object -npy"
+    "### numpy object -npy (pickle 형태로 저장)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "baddf9fc",
+   "id": "78e5ba63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,8 +383,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 64,
+   "id": "11d7019d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 4, 6, 8])"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "npy_array = np.load('npy_test_object.npy')\n",
+    "npy_array"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "70fd2be8",
+   "id": "68a19519",
    "metadata": {},
    "outputs": [],
    "source": []
