--- a/Pytorch/Linear regression.ipynb
+++ b/Pytorch/Linear regression.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1. Singlevariable Linear regression"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,12 +26,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# torch.optim 없이 구현"
+    "### torch.optim 없이 구현"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -62,16 +69,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor([2.0000]), tensor([5.8394e-06]))"
+       "(tensor([1.9912]), tensor([0.0199]))"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,12 +91,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# torch.optim 사용하여 구현"
+    "### torch.optim 사용하여 구현"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -133,6 +140,153 @@
    ],
    "source": [
     "print(f'W :{W[0]}, b :{b[0]}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2. Multivariable Linear regression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> * n x 3 matrix\n",
+    "> * 그에 따른 가중치 W도 3x1 로 설정"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train = torch.FloatTensor([[73,80,75],\n",
+    "                            [93,88,93],\n",
+    "                            [89,91,90],\n",
+    "                            [96,98,100],\n",
+    "                            [73,66,70]])\n",
+    "y_train = torch.FloatTensor([[152],[185],[180],[196],[142]])\n",
+    "\n",
+    "W = torch.zeros((3,1),requires_grad=True)\n",
+    "b = torch.zeros(1,requires_grad=True)\n",
+    "\n",
+    "optimizer = torch.optim.SGD([W,b],lr=1e-5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "epochs = 10000\n",
+    "\n",
+    "for epoch in range(epochs):\n",
+    "    hypothesis = x_train@W+b\n",
+    "    cost = torch.mean((hypothesis-y_train)**2)\n",
+    "    \n",
+    "    optimizer.zero_grad() # gradient 초기화\n",
+    "    cost.backward() #gradient 계산\n",
+    "    optimizer.step() #optimizer 학습"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([0.8881, 0.4642, 0.6582], grad_fn=<SqueezeBackward0>),\n",
+       " tensor([0.0195], requires_grad=True),\n",
+       " tensor(0.2712, grad_fn=<MeanBackward0>))"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "W.squeeze(),b,cost"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### nn.module을 이용해 구현\n",
+    "> * 기존 hypothesis와 loss를 미리 구현\n",
+    "> * 모델이 바뀔때마다 쉽게 수정 가능\n",
+    "> * 버그도 적음"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch.nn as nn\n",
+    "\n",
+    "class MultivariabelLinearRegressionModel(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.linear = nn.Linear(3,1) # linear는 3x1 을 가지는 weight\n",
+    "    def forward(self,x):\n",
+    "        return self.linear(x) # forward를 linear로 정의"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = MultivariabelLinearRegressionModel()\n",
+    "optimizer = torch.optim.SGD([W,b],lr=1e-5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for epoch in range(epochs):\n",
+    "    prediction = model(x_train) # forward 계산\n",
+    "    cost = nn.functional.mse_loss(prediction,y_train) # mse_loss 계산\n",
+    "    \n",
+    "    optimizer.zero_grad() # gradient 초기화\n",
+    "    cost.backward() #gradient 계산\n",
+    "    optimizer.step() #optimizer 학습"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[0.8881],\n",
+       "         [0.4642],\n",
+       "         [0.6582]], requires_grad=True),\n",
+       " tensor([0.0195], requires_grad=True))"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "W,b"
    ]
   }
  ],
