--- a/BasicNLP/Tokenizer.ipynb
+++ b/BasicNLP/Tokenizer.ipynb
@@ -526,21 +526,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sentence = ['안녕하세요. 저는 남자입니다']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "batch_inputs = tokenizer_bert(\n",
-    "    sentence,\n",
+    "    sentences,\n",
     "    padding='max_length',\n",
     "    max_length=12,\n",
     "    truncation=True\n",
@@ -549,16 +540,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[2, 8314, 3868, 16, 3054, 2166, 2067, 3, 0, 0, 0, 0]]"
+       "[[2, 2741, 1025, 444, 9176, 2589, 3216, 8492, 2421, 16, 3, 0],\n",
+       " [2, 2087, 4893, 1073, 2325, 3, 0, 0, 0, 0, 0, 0],\n",
+       " [2, 3366, 16, 16, 16, 1988, 3360, 16, 1979, 9086, 16, 3]]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -571,7 +564,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 세그먼트 정보"
+    "### 세그먼트 정보(첫번째 문장인지, 두번째 문장인지)"
    ]
   },
   {
