--- a/BasicNLP/Text classification.ipynb
+++ b/BasicNLP/Text classification.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "2ab680d6",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 80,
    "id": "edc486a3",
    "metadata": {},
    "outputs": [],
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 91,
    "id": "74f320bd",
    "metadata": {},
    "outputs": [],
@@ -166,10 +166,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 92,
    "id": "940e2bdf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'dataset' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[92], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m train_dataset \u001b[38;5;241m=\u001b[39m \u001b[43mdataset\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtrain\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m      2\u001b[0m test_dataset \u001b[38;5;241m=\u001b[39m dataset[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtest\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'dataset' is not defined"
+     ]
+    }
+   ],
    "source": [
     "train_dataset = dataset['train']\n",
     "test_dataset = dataset['test']"
@@ -186,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 114,
    "id": "802b7d0c",
    "metadata": {},
    "outputs": [
@@ -194,71 +206,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at beomi/kcbert-base were not used when initializing BertForSequenceClassification: ['cls.seq_relationship.bias', 'cls.predictions.decoder.weight', 'cls.predictions.bias', 'cls.predictions.decoder.bias', 'cls.predictions.transform.LayerNorm.bias', 'cls.seq_relationship.weight', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.transform.dense.weight', 'cls.predictions.transform.dense.bias']\n",
+      "Some weights of the model checkpoint at beomi/kcbert-base were not used when initializing BertForSequenceClassification: ['cls.seq_relationship.bias', 'cls.seq_relationship.weight', 'cls.predictions.decoder.weight', 'cls.predictions.decoder.bias', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.transform.dense.weight', 'cls.predictions.bias', 'cls.predictions.transform.dense.bias']\n",
       "- This IS expected if you are initializing BertForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing BertForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
       "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at beomi/kcbert-base and are newly initialized: ['classifier.weight', 'classifier.bias']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "BertForSequenceClassification(\n",
-       "  (bert): BertModel(\n",
-       "    (embeddings): BertEmbeddings(\n",
-       "      (word_embeddings): Embedding(30000, 768, padding_idx=0)\n",
-       "      (position_embeddings): Embedding(300, 768)\n",
-       "      (token_type_embeddings): Embedding(2, 768)\n",
-       "      (LayerNorm): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
-       "      (dropout): Dropout(p=0.1, inplace=False)\n",
-       "    )\n",
-       "    (encoder): BertEncoder(\n",
-       "      (layer): ModuleList(\n",
-       "        (0-11): 12 x BertLayer(\n",
-       "          (attention): BertAttention(\n",
-       "            (self): BertSelfAttention(\n",
-       "              (query): Linear(in_features=768, out_features=768, bias=True)\n",
-       "              (key): Linear(in_features=768, out_features=768, bias=True)\n",
-       "              (value): Linear(in_features=768, out_features=768, bias=True)\n",
-       "              (dropout): Dropout(p=0.1, inplace=False)\n",
-       "            )\n",
-       "            (output): BertSelfOutput(\n",
-       "              (dense): Linear(in_features=768, out_features=768, bias=True)\n",
-       "              (LayerNorm): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
-       "              (dropout): Dropout(p=0.1, inplace=False)\n",
-       "            )\n",
-       "          )\n",
-       "          (intermediate): BertIntermediate(\n",
-       "            (dense): Linear(in_features=768, out_features=3072, bias=True)\n",
-       "            (intermediate_act_fn): GELUActivation()\n",
-       "          )\n",
-       "          (output): BertOutput(\n",
-       "            (dense): Linear(in_features=3072, out_features=768, bias=True)\n",
-       "            (LayerNorm): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
-       "            (dropout): Dropout(p=0.1, inplace=False)\n",
-       "          )\n",
-       "        )\n",
-       "      )\n",
-       "    )\n",
-       "    (pooler): BertPooler(\n",
-       "      (dense): Linear(in_features=768, out_features=768, bias=True)\n",
-       "      (activation): Tanh()\n",
-       "    )\n",
-       "  )\n",
-       "  (dropout): Dropout(p=0.1, inplace=False)\n",
-       "  (classifier): Linear(in_features=768, out_features=2, bias=True)\n",
-       ")"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "model = BertForSequenceClassification.from_pretrained(\"beomi/kcbert-base\")\n",
-    "model.to('cuda')"
+    "# model.to('cuda')"
    ]
   },
   {
@@ -436,6 +394,251 @@
    ],
    "source": [
     "trainer.train()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1fd116ff",
+   "metadata": {},
+   "source": [
+    "# 모델 테스트"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d2e1aa4",
+   "metadata": {},
+   "source": [
+    "## 가장 성능이 좋은 모델 찾기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
+   "id": "426e8893",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import json\n",
+    "\n",
+    "# 마지막 데이터가 저장된 위치\n",
+    "path = 'E:\\Model\\checkpoint-doccls\\checkpoint-14000'\n",
+    "loss_step=[]\n",
+    "state = os.path.join(path,'trainer_state.json') \n",
+    "with open(state,'r') as f:\n",
+    "    for log in json.load(f)['log_history']:\n",
+    "        loss,step = log['loss'],log['step']\n",
+    "        loss_step.append((loss,step))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
+   "id": "24117139",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.1002, 14000)"
+      ]
+     },
+     "execution_count": 188,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loss,step = sorted(loss_step)[0]\n",
+    "loss,step"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "3863c656",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_path = f'E:/Model/checkpoint-doccls/checkpoint-{step}'\n",
+    "fine_tuned_model = BertForSequenceClassification.from_pretrained(model_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7a23a914",
+   "metadata": {},
+   "source": [
+    "### 예측해보기\n",
+    "> * predict : fine_tuning 전 bert 모델\n",
+    "> * nsmc_predict : nsmc 데이터셋으로 fine_tuning한 모델"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 217,
+   "id": "965cdfe0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict(sentence):\n",
+    "    features = tokenizer(\n",
+    "        [sentence],\n",
+    "        max_length=128,\n",
+    "        padding='max_length',\n",
+    "        truncation=True\n",
+    "    )\n",
+    "\n",
+    "    features = {k:torch.tensor(v) for k,v in features.items()}\n",
+    "    with torch.no_grad():\n",
+    "        outputs = model(**features)\n",
+    "        prob = outputs.logits.softmax(dim=1)[0]\n",
+    "        pos,neg = round(prob[1].item(),4),round(prob[0].item(),4)\n",
+    "        pred = \"긍정\" if torch.argmax(prob)==1 else \"부정\"\n",
+    "        return {\n",
+    "            'fine_tuned' : False,\n",
+    "            'sentence':sentence,\n",
+    "            'pos':pos,\n",
+    "            'neg':neg,\n",
+    "            'pred':pred\n",
+    "        }\n",
+    "    \n",
+    "def nsmc_predict(sentence):\n",
+    "    features = tokenizer(\n",
+    "        [sentence],\n",
+    "        max_length=128,\n",
+    "        padding='max_length',\n",
+    "        truncation=True\n",
+    "    )\n",
+    "\n",
+    "    features = {k:torch.tensor(v) for k,v in features.items()}\n",
+    "    with torch.no_grad():\n",
+    "        outputs = fine_tuned_model(**features)\n",
+    "        prob = outputs.logits.softmax(dim=1)[0]\n",
+    "        pos,neg = round(prob[1].item(),4),round(prob[0].item(),4)\n",
+    "        pred = \"긍정\" if torch.argmax(prob)==1 else \"부정\"\n",
+    "        return {\n",
+    "            'fine_tuned' : True,\n",
+    "            'sentence':sentence,\n",
+    "            'pos':pos,\n",
+    "            'neg':neg,\n",
+    "            'pred':pred\n",
+    "        }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 224,
+   "id": "4ad2ae46",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "문장 입력 :한번 더 보고싶다\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "({'fine_tuned': False,\n",
+       "  'sentence': '한번 더 보고싶다',\n",
+       "  'pos': 0.4795,\n",
+       "  'neg': 0.5205,\n",
+       "  'pred': '부정'},\n",
+       " {'fine_tuned': True,\n",
+       "  'sentence': '한번 더 보고싶다',\n",
+       "  'pos': 0.9598,\n",
+       "  'neg': 0.0402,\n",
+       "  'pred': '긍정'})"
+      ]
+     },
+     "execution_count": 224,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sentence = input('문장 입력 :')\n",
+    "predict(sentence),nsmc_predict(sentence)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "554b943f",
+   "metadata": {},
+   "source": [
+    "## 다른 방법 -> TextClassificationPipeline 사용"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "id": "d6aa9c90",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import TextClassificationPipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
+   "id": "1872374b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\conda\\envs\\torch-gpu\\lib\\site-packages\\transformers\\pipelines\\text_classification.py:104: UserWarning: `return_all_scores` is now deprecated,  if want a similar funcionality use `top_k=None` instead of `return_all_scores=True` or `top_k=1` instead of `return_all_scores=False`.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "predict=TextClassificationPipeline(model=model,tokenizer=tokenizer,return_all_scores=True)\n",
+    "nsmc_predict=TextClassificationPipeline(model=fine_tuned_model,tokenizer=tokenizer,return_all_scores=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 226,
+   "id": "dd073a4f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "문장 입력 :한번 더 보고싶다.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "([[{'label': 'LABEL_0', 'score': 0.5195181965827942},\n",
+       "   {'label': 'LABEL_1', 'score': 0.4804818332195282}]],\n",
+       " [[{'label': 'LABEL_0', 'score': 0.02928623929619789},\n",
+       "   {'label': 'LABEL_1', 'score': 0.97071373462677}]])"
+      ]
+     },
+     "execution_count": 226,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sentence = input('문장 입력 :')\n",
+    "predict(sentence),nsmc_predict(sentence)"
    ]
   }
  ],
