--- a/BasicNLP/Text classification.ipynb
+++ b/BasicNLP/Text classification.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "2ab680d6",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 9,
    "id": "edc486a3",
    "metadata": {},
    "outputs": [],
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 3,
    "id": "802b7d0c",
    "metadata": {},
    "outputs": [
@@ -206,17 +206,71 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at beomi/kcbert-base were not used when initializing BertForSequenceClassification: ['cls.seq_relationship.bias', 'cls.seq_relationship.weight', 'cls.predictions.decoder.weight', 'cls.predictions.decoder.bias', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.transform.dense.weight', 'cls.predictions.bias', 'cls.predictions.transform.dense.bias']\n",
+      "Some weights of the model checkpoint at beomi/kcbert-base were not used when initializing BertForSequenceClassification: ['cls.predictions.bias', 'cls.predictions.transform.dense.weight', 'cls.seq_relationship.bias', 'cls.seq_relationship.weight', 'cls.predictions.decoder.weight', 'cls.predictions.decoder.bias', 'cls.predictions.transform.dense.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.transform.LayerNorm.bias']\n",
       "- This IS expected if you are initializing BertForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing BertForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
-      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at beomi/kcbert-base and are newly initialized: ['classifier.weight', 'classifier.bias']\n",
+      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at beomi/kcbert-base and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "BertForSequenceClassification(\n",
+       "  (bert): BertModel(\n",
+       "    (embeddings): BertEmbeddings(\n",
+       "      (word_embeddings): Embedding(30000, 768, padding_idx=0)\n",
+       "      (position_embeddings): Embedding(300, 768)\n",
+       "      (token_type_embeddings): Embedding(2, 768)\n",
+       "      (LayerNorm): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
+       "      (dropout): Dropout(p=0.1, inplace=False)\n",
+       "    )\n",
+       "    (encoder): BertEncoder(\n",
+       "      (layer): ModuleList(\n",
+       "        (0-11): 12 x BertLayer(\n",
+       "          (attention): BertAttention(\n",
+       "            (self): BertSelfAttention(\n",
+       "              (query): Linear(in_features=768, out_features=768, bias=True)\n",
+       "              (key): Linear(in_features=768, out_features=768, bias=True)\n",
+       "              (value): Linear(in_features=768, out_features=768, bias=True)\n",
+       "              (dropout): Dropout(p=0.1, inplace=False)\n",
+       "            )\n",
+       "            (output): BertSelfOutput(\n",
+       "              (dense): Linear(in_features=768, out_features=768, bias=True)\n",
+       "              (LayerNorm): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
+       "              (dropout): Dropout(p=0.1, inplace=False)\n",
+       "            )\n",
+       "          )\n",
+       "          (intermediate): BertIntermediate(\n",
+       "            (dense): Linear(in_features=768, out_features=3072, bias=True)\n",
+       "            (intermediate_act_fn): GELUActivation()\n",
+       "          )\n",
+       "          (output): BertOutput(\n",
+       "            (dense): Linear(in_features=3072, out_features=768, bias=True)\n",
+       "            (LayerNorm): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
+       "            (dropout): Dropout(p=0.1, inplace=False)\n",
+       "          )\n",
+       "        )\n",
+       "      )\n",
+       "    )\n",
+       "    (pooler): BertPooler(\n",
+       "      (dense): Linear(in_features=768, out_features=768, bias=True)\n",
+       "      (activation): Tanh()\n",
+       "    )\n",
+       "  )\n",
+       "  (dropout): Dropout(p=0.1, inplace=False)\n",
+       "  (classifier): Linear(in_features=768, out_features=2, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "model = BertForSequenceClassification.from_pretrained(\"beomi/kcbert-base\")\n",
-    "# model.to('cuda')"
+    "model.to('cuda')"
    ]
   },
   {
@@ -414,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 4,
    "id": "426e8893",
    "metadata": {
     "scrolled": false
@@ -436,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 5,
    "id": "24117139",
    "metadata": {
     "scrolled": true
@@ -448,7 +502,7 @@
        "(0.1002, 14000)"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 6,
    "id": "3863c656",
    "metadata": {},
    "outputs": [],
@@ -481,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 7,
    "id": "965cdfe0",
    "metadata": {},
    "outputs": [],
@@ -533,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 12,
    "id": "4ad2ae46",
    "metadata": {
     "scrolled": true
@@ -543,25 +597,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "문장 입력 :한번 더 보고싶다\n"
+      "문장 입력 :한번 더 보고싶네\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "({'fine_tuned': False,\n",
-       "  'sentence': '한번 더 보고싶다',\n",
-       "  'pos': 0.4795,\n",
-       "  'neg': 0.5205,\n",
+       "  'sentence': '한번 더 보고싶네',\n",
+       "  'pos': 0.3856,\n",
+       "  'neg': 0.6144,\n",
        "  'pred': '부정'},\n",
        " {'fine_tuned': True,\n",
-       "  'sentence': '한번 더 보고싶다',\n",
-       "  'pos': 0.9598,\n",
-       "  'neg': 0.0402,\n",
+       "  'sentence': '한번 더 보고싶네',\n",
+       "  'pos': 0.9812,\n",
+       "  'neg': 0.0188,\n",
        "  'pred': '긍정'})"
       ]
      },
-     "execution_count": 224,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
